# light-speed-io

./: .gitignore  Cargo.toml  LICENSE  README.md  design.md  page-faults.md  planned_design.md  pyproject.toml
benches/: fio.ini  get.rs  io_uring_local.rs
crates/lsio_aligned_buffer/: Cargo.toml
crates/lsio_aligned_buffer/src/: lib.rs
crates/lsio_aligned_bytes/: Cargo.toml  README.md
crates/lsio_aligned_bytes/src/: lib.rs
crates/lsio_bench/: Cargo.toml  README.md
crates/lsio_bench/src/: main.rs
crates/lsio_io/: Cargo.toml  README.md
crates/lsio_io/src/: lib.rs
crates/lsio_threadpool/: Cargo.toml  README.md
crates/lsio_threadpool/src/: lib.rs  park_manager.rs  shared_state.rs  threadpool.rs  worker.rs
crates/lsio_uring/: Cargo.toml  README.md
crates/lsio_uring/benches/: fio.ini  get.rs
crates/lsio_uring/src/: close.rs  get_range.rs  get_ranges.rs  io_uring.rs  lib.rs  new_design_march_2024.rs  old_worker.rs  opcode.rs  open_file.rs  operation.rs  sqe.rs  tracker.rs  user_data.rs  worker.rs
crates/lsio_uring/src/uring/: mod.rs  operation.rs
crates/lsio_uring/tests/: integration_test.rs
python/light_speed_io/: __init__.py
python/light_speed_io/light_speed_io/: __init__.py  ffi.py
src/: aligned_buffer.rs  draft_API_design.rs  implementation_plan.md  io_uring.rs  io_uring_local.rs  io_uring_thread.rs  lib.rs  new_design_march_2024.rs  object_store_adapter.rs  object_store_to_thread.rs  operation.rs  operation_future.rs  optracker.rs  output.rs  python_api.rs  tracker.rs  user_operation.rs
src/io_uring_local/: prep_operation_for_io_uring.rs  thread.rs
src/uring/: get.rs  get_range.rs  mod.rs  operation.rs  worker.rs
