[package]
name = "light-speed-io"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/JackKelly/light-speed-io"
repository = "https://github.com/JackKelly/light-speed-io"
readme = "README.md"

[lib]
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
io-uring = "0.6"
libc = "0.2"  # Just used for filesystem flags
nix = { version = "0.28", features = ["fs"] }
object_store = "0.9.0"
snafu = "0.8.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"]}
url = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "get"
harness = false

[profile.bench]
debug = true  # Enable debuginfo when profiling with cargo flamegraph.

[profile.release]
panic = 'abort' # Exit the whole process if any thread panics.

[profile.dev]
panic = 'abort' # Exit the whole process if any thread panics.

