[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/JackKelly/light-speed-io"
repository = "https://github.com/JackKelly/light-speed-io"
readme = "README.md"
authors=["Jack Kelly <jack@openclimatefix.org>"]


[workspace.dependencies]
anyhow = "1.0"
bytes = "1.5.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
crossbeam = "0.8.4"
io-uring = "0.6"
libc = "0.2"  # Used for filesystem flags
nix = { version = "0.28", features = ["fs"] }
object_store = "0.9.0"
snafu = "0.8.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"]}
url = "2.5.0"

[profile.bench]
debug = true  # Enable debuginfo when profiling with cargo flamegraph.

