[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "light_speed_io"
version = "0.1.0"
dependencies = ["cffi"]
description = "Read many chunks of files at high speed."
authors = [{ name = "Jack Kelly", email = "jack@openclimatefix.org" }]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Filesystems",
]

[tool.ruff]
line-length = 100

# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["D"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.maturin]
python-source = "python"
module-name = "light_speed_io"
bindings = "cffi"
compatibility = "linux"