[package]
name = "lsio_aligned_buffer"
version = "0.0.1"  # Maybe we will publish this as a stand-alone crate.
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
