[package]
name = "lsio_io"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
lsio_aligned_bytes = { path = "../lsio_aligned_bytes" }

