[package]
name = "lsio_uring"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
lsio_aligned_bytes = { path = "../lsio_aligned_bytes" }
lsio_io = { path = "../lsio_io" }
lsio_threadpool = { path = "../lsio_threadpool" }
anyhow = { workspace = true } 
crossbeam-channel =  { workspace = true }
io-uring =  { workspace = true } 
libc =  { workspace = true } 
nix =  { workspace = true } 

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }

[[bench]]  # Yes, this is supposed to have double square brackets!
name = "get"
harness = false

